commit add link footer and header all html

--- a/src/main/webapp/css/Eliminar.css
+++ b/src/main/webapp/css/Eliminar.css
@@ -8,7 +8,7 @@ and open the template in the editor.
     Author     : ngall
 */
 
-@import './registro.css';
+@import './crear-rutina.css';
 .espacio{
     padding: 10px;
     width: 325px;
